fixed alignment and centering

--- a/frontend/src/components/BarChartShare.css
+++ b/frontend/src/components/BarChartShare.css
@@ -1,4 +1,4 @@
 .BARCHART {
     margin: auto;
-    width: 600px;
+    width: 570px;
 }
