--- a/frontend/src/components/Graph.css
+++ b/frontend/src/components/Graph.css
@@ -1,7 +1,4 @@
 .GRAPH {
-    width: 490px;
+    width: 570px;
     margin: auto;
-}
-.graphplot {
-    padding: 10px;
 }
